--- a/index.html
+++ b/index.html
@@ -3,45 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carbon API</title>
+    <title>Hotels API</title>
   </head>
   <body>
-    <h2>请求地址: /api</h2>
-    <h2>请求方式：POST</h2>
-    <h2>请求参数：code, theme</h2>
-    <h3>theme 可选值：</h3>
-    <ui>
-      <li>3024 Night</li>
-      <li>A11y Dark</li>
-      <li>Blackboard</li>
-      <li>Base 16 (Dark)</li>
-      <li>Cobalt</li>
-      <li>Dracula ProPurchase</li>
-      <li>Duotone</li>
-      <li>Hopscotch</li>
-      <li>Lucario</li>
-      <li>Material</li>
-      <li>Monokai</li>
-      <li>Night Owl</li>
-      <li>Nord</li>
-      <li>Oceanic Next</li>
-      <li>One Light</li>
-      <li>One Dark</li>
-      <li>Panda</li>
-      <li>Paraiso</li>
-      <li>Seti</li>
-      <li>Shades of Purple</li>
-      <li>Solarized (Dark)</li>
-      <li>Solarized (Light)</li>
-      <li>SynthWave '84</li>
-      <li>Twilight</li>
-      <li>Verminal</li>
-      <li>VSCode</li>
-      <li>Yeti</li>
-      <li>Zenburn</li>
-    </ui>
-    <hr />
-    <h2>返回值：</h2>
-    <h3>图片(ArrayBuffer)</h3>
+     
   </body>
 </html>
